--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// DB
+	runtimeOnly ('com.mysql:mysql-connector-j') //mysql8
+	implementation ('org.springframework.boot:spring-boot-starter-jdbc')
+	implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
 }
 
 tasks.named('test') {
