--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,19 @@ repositories {
 }
 
 dependencies {
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	//runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// Web
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// Lombok
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// DB
+	runtimeOnly ('com.mysql:mysql-connector-j') //mysql8
+	implementation ('org.springframework.boot:spring-boot-starter-jdbc')
+	implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
 }
 
 tasks.named('test') {
