--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.jetbrains:annotations:24.0.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	// Web
@@ -35,6 +36,9 @@ dependencies {
 	runtimeOnly ('com.mysql:mysql-connector-j') //mysql8
 	implementation ('org.springframework.boot:spring-boot-starter-jdbc')
 	implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
+
+	// Swagger
+	implementation ('org.springdoc:springdoc-openapi-ui:1.6.12')
 }
 
 tasks.named('test') {
