--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.jetbrains:annotations:24.0.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	// Web
@@ -30,13 +31,15 @@ dependencies {
 
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	// DB
 	runtimeOnly ('com.mysql:mysql-connector-j') //mysql8
 	implementation ('org.springframework.boot:spring-boot-starter-jdbc')
 	implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
+
+	// Swagger
+	implementation ('org.springdoc:springdoc-openapi-ui:1.6.12')
 }
 
 tasks.named('test') {
