--- a/.gitignore
+++ b/.gitignore
@@ -36,12 +36,5 @@ out/
 ### VS Code ###
 .vscode/
 
-<<<<<<< HEAD
-<<<<<<< feature/auth
-=======
 ### Custom ###
->>>>>>> develop
-=======
-### Custom ###
->>>>>>> 701c15e7c86eae67d09b88d9e25104ee3d287da3
-/src/main/resources/application.yml
+/src/main/resources/application.properties
