--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
 	// Swagger
 	implementation ('org.springdoc:springdoc-openapi-ui:1.6.15')
+	//implementation 'io.springfox:springfox-boot-starter:3.0.0'
 }
 
 tasks.named('test') {
