--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,12 +13,12 @@ spring:
     open-in-view: true
     hibernate:
       ddl-auto: update
-      #naming:
-       #physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      #use-new-id-generator-mappings: false
+
     show-sql: true
     properties:
       hibernate.format_sql: true
+      hibernate.use_sql_comments: true
+      globally_quoted_identifiers: true # 예약어
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
 
 
@@ -31,9 +31,9 @@ spring:
       client:
         registration:
           kakao:
-            client-id:  ${KAKAO_CLIENT_ID}
-            client-secret:  ${KAKAO_CLIENT_SECRET}
-            redirect-uri: "http://localhost:8080/oauth2/callback"
+            client-id: ${KAKAO_CLIENT_ID}
+            client-secret: ${KAKAO_CLIENT_SECRET}
+            redirect-uri: http://localhost:8080/oauth2/callback
             client-authentication-method: POST
             authorization-grant-type: authorization_code
             scope:
