--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,6 +53,15 @@ spring:
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
 
+  batch:
+    job:
+      enable: false #true :  애플리케이션 실행 시 등록된 Job을 실행
+      names: ${job.name:NONE}
+    jdbc:
+      initialize-schema: always
+
+
+
 
 jwt:
   secret: ${JWT_SECRET}
