--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,9 @@ dependencies {
 
 	// Swagger
 	implementation ('org.springdoc:springdoc-openapi-ui:1.6.12')
+
+	// S3
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.232'
 }
 
 tasks.named('test') {
