--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,3 +50,13 @@ jwt:
   secret: ${JWT_SECRET}
   access-token-validity-in-seconds: 3600000
   refresh-token-validity-in-seconds: 259200000
+
+cloud:
+  aws:
+    s3:
+      bucket: ${S3_BUCKET_NAME}
+    stack.auto: false
+    region.static: ap-northeast-2
+    credentials:
+      accessKey: ${S3_ACCESS_KEY}
+      secretKey: ${S3_SECRECT_KEY}
