--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   jpa:
     open-in-view: true
     hibernate:
-      ddl-auto: update
+#      ddl-auto: update
 #      naming:
 #        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 #      use-new-id-generator-mappings: false
@@ -24,7 +24,6 @@ spring:
       hibernate.use_sql_comments: true
       globally_quoted_identifiers: true # 예약어
       dialect: org.hibernate.dialect.MySQL8InnoDBDialect
-
 
   logging:
     level:
@@ -74,3 +73,7 @@ cloud:
       accessKey: ${S3_ACCESS_KEY}
       secretKey: ${S3_SECRECT_KEY}
   refresh-token-validity-in-seconds: 1209600000
+
+# 파일 최대 10MB까지 허용
+spring.servlet.multipart.maxFileSize: 10MB
+spring.servlet.multipart.maxRequestSize: 10MB
