--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
 
   jpa:
     open-in-view: true
-    hibernate:
-      ddl-auto: update
+#    hibernate:
+#     ddl-auto: update
 
 
 #      naming:
